...
                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillProportionally" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="xsb-5J-dCq">
                                <frame key="frameInset" minX="20" minY="166" width="343" height="268"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="2PJ-3t-WsX">
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9lG-Vm-m8B">
                                                <accessibility key="accessibilityConfiguration" identifier="present_alert_button"/>
                                                <state key="normal" title="Present Alert"/>
                                                <connections>
                                                    <action selector="handleButtonTap:" destination="QDe-Er-Gfq" eventType="touchUpInside" id="kNz-6s-412"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JIV-aG-EPo">
                                                <accessibility key="accessibilityConfiguration" identifier="present_alert_with_action_button"/>
                                                <state key="normal" title="Present Alert w/ Action"/>
                                                <connections>
                                                    <action selector="handleButtonTap:" destination="QDe-Er-Gfq" eventType="touchUpInside" id="qCQ-6D-6Ld"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PIH-Tb-Ebk">
                                                <accessibility key="accessibilityConfiguration" identifier="present_alert_with_action_plus_textfield_button"/>
                                                <state key="normal" title="Present Alert w/ Action + Text Field"/>
                                                <connections>
                                                    <action selector="handleButtonTap:" destination="QDe-Er-Gfq" eventType="touchUpInside" id="b2I-2V-pRE"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="U6B-oC-k49">
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8P-Af-mL8">
                                                <accessibility key="accessibilityConfiguration" identifier="present_action_sheet_button"/>
                                                <state key="normal" title="Present Action Sheet"/>
                                                <connections>
                                                    <action selector="handleButtonTap:" destination="QDe-Er-Gfq" eventType="touchUpInside" id="o8e-nJ-VAS"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Shc-AG-udM">
                                                <accessibility key="accessibilityConfiguration" identifier="present_action_sheet_button_with_action_button"/>
                                                <state key="normal" title="Present Action Sheet w/ Action"/>
                                                <connections>
                                                    <action selector="handleButtonTap:" destination="QDe-Er-Gfq" eventType="touchUpInside" id="z14-xo-D4j"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SOy-Ee-9TK">
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgZ-v7-QaO">
                                                <accessibility key="accessibilityConfiguration" identifier="present_view_controller_button"/>
                                                <state key="normal" title="Present View Controller"/>
                                                <connections>
                                                    <segue destination="uKT-CS-qNd" kind="presentation" id="lls-bB-25D"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                            <constraint firstItem="jO8-bx-F8M" firstAttribute="leading" secondItem="vOj-zS-RTA" secondAttribute="leadingMargin" id="XqK-kL-Ud8"/>
                            <constraint firstItem="MpD-NB-19a" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jO8-bx-F8M" secondAttribute="bottom" id="m0y-qK-53i"/>
                            <constraint firstAttribute="trailingMargin" secondItem="jO8-bx-F8M" secondAttribute="trailing" id="msm-II-jZh"/>
                            <constraint firstItem="jO8-bx-F8M" firstAttribute="top" relation="greaterThanOrEqual" secondItem="WOj-g2-cim" secondAttribute="bottom" id="pvL-Eb-cE3"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Presented View Controller" id="vj1-oe-oMQ">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="3vD-cV-OXO">
                            <connections>
                                <action selector="handleButtonTap:" destination="ixG-45-PP7" id="plD-hu-r7c"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
