...
    override var preferredStatusBarStyle : UIStatusBarStyle {
        return .lightContent
    }

    @IBAction func handleButtonTap(_ sender: AnyObject) {
        if sender as? UIButton == self.presentAlertButton {
            _ = AlertHandler.displayAlert(title: "Title", message: "Message")
        } else if sender as? UIButton == self.presentAlertWithActionButton {
            _ = AlertHandler.displayAlert(
                title: "Title",
                message: "Message",
                actions: [
                    UIAlertAction(title: "Title", style: .default, handler: nil)
...
                message: "Message",
                actions: [
                    UIAlertAction(title: "Title", style: .default, handler: nil)
                ],
                textFieldHandlers: [
                    { (textField) -> Void in
                        textField.placeholder = "placeholder"
                    }
                ]
            )
            
        } else if sender as? UIButton == self.presentActionSheetButton {
            _ = AlertHandler.displayActionSheet(title: "Title", message: "Message", actions: nil, fromView: sender as? UIView)
...
